--- a/KBO Inventory Update/KBO Inventory Update.csproj
+++ b/KBO Inventory Update/KBO Inventory Update.csproj
@@ -8,7 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="BlazorInputFile" Version="0.2.0" />
+    <PackageReference Include="BlazorInputFileExtended" Version="2.4.18" />
     <PackageReference Include="IgniteUI.Blazor" Version="22.2.21" />
+    <PackageReference Include="Tewr.Blazor.FileReader" Version="3.3.1.21360" />
   </ItemGroup>
 
   <ItemGroup>
@@ -16,5 +19,9 @@
     <None Update="Pages\UploadInventorySheets.razor.css" CssScope="upload-inventory-sheets-scope" />
     <None Update="Pages\UpdateInventory.razor.css" CssScope="update-inventory-scope" />
     <None Update="Pages/ResultsDashboard.razor.css" CssScope="results-dashboard-scope" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Uploads\" />
   </ItemGroup>
 </Project>
